texi2html/test/invalid/res_info/texi_style_not_closed_in_cartouche/style_not_closed_in_cartouche.texi
\input texinfo @c -*-texinfo-*-

@setfilename style_not_closed_in_cartouche.info

@node Top
@top Test command not closed in cartouche

@cartouche
cartouche @code{in code 
@end cartouche

@bye
